--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
         android:id="@+id/detailLayout">
 
     <TextView
@@ -16,96 +17,111 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginEnd="8dp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="24dp"/>
 
     <TextView
             android:layout_width="wrap_content"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:text="@string/book_name"
             app:layout_constraintStart_toStartOf="parent"
             android:id="@+id/create_name"
             app:layout_constraintEnd_toStartOf="@+id/edit_name"
             android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.4"
-            android:layout_marginBottom="116dp"
-            app:layout_constraintBottom_toTopOf="@+id/create_author"
-            android:layout_marginStart="8dp"/>
-
-    <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/edit_name"
-            android:inputType="text"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="16dp"
-            android:hint="@string/name_book_hint"
-            android:layout_marginBottom="72dp"
-            app:layout_constraintBottom_toTopOf="@+id/edit_author"/>
+            app:layout_constraintHorizontal_bias="0.5"
+            android:layout_marginStart="8dp"
+            android:textStyle="bold"
+            app:layout_constraintHorizontal_chainStyle="spread"
+            app:layout_constraintBaseline_toBaselineOf="@+id/edit_name"/>
 
     <TextView
             android:text="@string/create_author"
-            android:layout_width="43dp"
-            android:layout_height="34dp"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"
-            android:id="@+id/create_author"
-            app:layout_constraintEnd_toStartOf="@+id/edit_author"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.421"
-            android:layout_marginBottom="64dp"
-            app:layout_constraintBottom_toTopOf="@+id/create_genre"/>
-
-    <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/edit_author"
-            android:hint="@string/create_author_hint"
-            android:inputType="text"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:autofillHints=""
-            tools:targetApi="o"
-            android:layout_marginBottom="72dp"
-            app:layout_constraintBottom_toTopOf="@+id/spinner_genre"
-            android:layout_marginEnd="16dp"/>
+            app:layout_constraintStart_toStartOf="@+id/create_name"
+            android:id="@+id/create_author"
+            android:textStyle="bold"
+            app:layout_constraintBaseline_toBaselineOf="@+id/edit_author"/>
 
     <TextView
             android:text="@string/genre"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/create_genre"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="16dp"
-            app:layout_constraintEnd_toStartOf="@+id/spinner_genre"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="168dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.213"/>
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="@+id/create_author"
+            app:layout_constraintBottom_toBottomOf="@+id/spinner_genre"
+            app:layout_constraintTop_toTopOf="@+id/spinner_genre"
+            app:layout_constraintEnd_toEndOf="@+id/barrier"
+            android:layout_marginEnd="8dp"/>
+
+    <EditText
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/edit_name"
+            android:inputType="text"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="24dp"
+            android:hint="@string/name_book_hint"
+            app:layout_constraintBottom_toTopOf="@+id/edit_author"
+            tools:ignore="Autofill"
+            app:layout_constraintTop_toBottomOf="@+id/detail_frag_header"
+            app:layout_constraintVertical_chainStyle="packed"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintVertical_bias="0.2"
+            app:layout_constraintStart_toEndOf="@+id/barrier"
+            android:layout_marginStart="16dp"/>
+
+    <EditText
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/edit_author"
+            android:hint="@string/create_author_hint"
+            android:inputType="text"
+            app:layout_constraintEnd_toEndOf="@+id/edit_name"
+            android:autofillHints=""
+            tools:targetApi="o"
+            app:layout_constraintBottom_toTopOf="@+id/spinner_genre"
+            app:layout_constraintTop_toBottomOf="@+id/edit_name"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintStart_toEndOf="@+id/barrier"
+            android:layout_marginStart="16dp"/>
 
     <Spinner
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="84dp"
+            app:layout_constraintEnd_toEndOf="@+id/edit_author"
             android:id="@+id/spinner_genre"
-            android:layout_marginBottom="164dp"
-            app:layout_constraintBottom_toBottomOf="parent">
+            app:layout_constraintTop_toBottomOf="@+id/edit_author"
+            app:layout_constraintBottom_toTopOf="@+id/create_button"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintStart_toEndOf="@+id/barrier"
+            android:layout_marginStart="16dp">
 
     </Spinner>
 
-    <Button
+    <com.google.android.material.button.MaterialButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="45dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="260dp"
+            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
+            app:layout_constraintEnd_toEndOf="@+id/spinner_genre"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="44dp"
             android:id="@+id/create_button"
-            app:layout_constraintHorizontal_bias="1.0"/>
+            android:text="Save"
+            app:icon="@drawable/ic_check"
+            app:layout_constraintTop_toBottomOf="@+id/spinner_genre"
+            android:layout_marginTop="16dp"/>
 
-
+    <androidx.constraintlayout.widget.Barrier
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/barrier"
+            app:barrierDirection="right"
+            app:constraint_referenced_ids="create_author,create_name,create_genre"
+            tools:layout_editor_absoluteX="393dp"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
